@@ -9,15 +9,18 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.http.MediaType;
+import org.springframework.security.test.context.support.WithMockUser;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.ResultActions;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.nio.charset.StandardCharsets;
 import java.util.List;
+import java.util.Optional;
 
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
 import static org.springframework.test.web.servlet.result.MockMvcResultHandlers.print;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
 
@@ -62,6 +65,7 @@ class ProductControllerTest {
 
     @Test
     @DisplayName("상품 등록")
+    @WithMockUser(username = "user1")
     void t2() throws Exception {
         ResultActions resultActions = mvc
                 .perform(
@@ -81,7 +85,10 @@ class ProductControllerTest {
                 .andDo(print());
 
         List<Product> productList = productService.findAll();
-        Product lastProduct= productList.getLast();
+        assertFalse(productList.isEmpty(), "상품 리스트가 비어 있어서는 안 됩니다.");
+        Product lastProduct = productList.get(productList.size() - 1);
+
+        assertEquals("user1", lastProduct.getAdmin().getUsername());
 
         resultActions
                 .andExpect(handler().handlerType(ProductController.class))
@@ -93,5 +100,62 @@ class ProductControllerTest {
                 .andExpect(jsonPath("$.price").value(lastProduct.getPrice()))
                 .andExpect(jsonPath("$.quantity").value(lastProduct.getQuantity()))
                 .andExpect(jsonPath("$.imgPath").value(lastProduct.getImgPath()));
+    }
+
+    @Test
+    @DisplayName("상품 수정")
+    @WithMockUser(username = "user1")
+    void t3() throws Exception {
+        int productId = 1;
+        ResultActions resultActions = mvc
+                .perform(
+                        put("/admin/product/{id}", productId)
+                                .content("""
+                                        {
+                                             "name" : "우간다 커피",
+                                             "price" : 9000,
+                                             "quantity" : 2,
+                                             "imgPath" : ""
+                                        }
+                                        """)
+                                .contentType(
+                                        new MediaType(MediaType.APPLICATION_JSON, StandardCharsets.UTF_8)
+                                )
+                )
+                .andDo(print());
+
+        Product product;
+        Optional<Product> productOptional = productService.findById(productId);
+        if (productOptional.isPresent()) {
+            product = productOptional.get();
+        }else{
+            product = new Product();
+        }
+
+        resultActions
+                .andExpect(handler().handlerType(ProductController.class))
+                .andExpect(handler().methodName("updateProduct"))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.name").value(product.getName()))
+                .andExpect(jsonPath("$.price").value(product.getPrice()))
+                .andExpect(jsonPath("$.quantity").value(product.getQuantity()))
+                .andExpect(jsonPath("$.imgPath").value(product.getImgPath()));
+    }
+
+    @Test
+    @DisplayName("상품 삭제")
+    @WithMockUser(username = "user1")
+    void t4() throws Exception {
+        int productId = 1;
+        ResultActions resultActions = mvc
+                .perform(delete("/admin/product/{id}", productId)
+                        .contentType(new MediaType(MediaType.APPLICATION_JSON, StandardCharsets.UTF_8)))
+                .andDo(print());
+
+        resultActions
+                .andExpect(handler().handlerType(ProductController.class))
+                .andExpect(handler().methodName("deleteProduct"))
+                .andExpect(status().isOk())
+                .andExpect(content().string("Product success deleted"));
     }
 }
